[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contracts"
version = "0.1.0"
description = "Contracts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gen"]
